# front

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  GALLERY.md  LANDSCAPE.md  LICENSE.md  LISEZMOI.md  README.md  SECURITY.md  SKILLS.txt  TRIGGERS.md  llms.txt  mypy.ini  pytest.ini  requirements-dev.txt  ruff.toml
.github/workflows/: ci.yml  no-claude-trailers.yml  release.yml
docs/: ACCESSIBILITY.md  AUDIO.md  CLI.md  COLORS.md  FIGURES.md  PUBLISH.md  UI.md  UX-LAWS.md  VISION.md
front/: SKILL.md
front-a11y/: SKILL.md
front-a11y/references/: alt-text-ai.md  contrast-audit.md  cvd-simulation.md  lint-a11y.md
front-a11y/scripts/: _click.py  _lang.py  alt_from_ollama.py  audit_contrast.py  captions_from_whisper.py  install_alt_ai.py  install_captions.py  lint_a11y.py  requirements-alt-text.txt  requirements-captions.txt  simulate_cvd.py
front-accessibility/: SKILL.md
front-accessibility/references/: lint-a11y.md
front-accessibility/scripts/: _argparse.py  lint_a11y.py
front-audio/: SKILL.md
front-audio/references/: captions-ai.md  diarization.md
front-audio/scripts/: _argparse.py  _click.py  _lang.py  _vocab.py  caption_diarize.py  captions_from_whisper.py  diarize_from_nemo.py  identify_from_titanet.py  install_captions.py  install_diarize.py  name_from_transcript.py  requirements-captions.txt  requirements-diarize.txt  translate_captions.py
front-cli/: README.md  pyproject.toml
front-cli-gui/: SKILL.md
front-cli/src/front_cli/: __init__.py  __main__.py  cli.py
front-cli/tests/: test_cli.py
front-colors/: SKILL.md
front-figures/: FIGURES.md  SKILL.md
front-publish/: SKILL.md
front-ui/: SKILL.md
front-ux-laws/: SKILL.md
front-vision/: SKILL.md
scripts/: _argparse.py  build_triggers.py  cleanup_local_skills.py  gallery_screenshot.py  release.sh  run_mypy.sh  skills_manifest.py  validate_all.py  validate_skill.py
tests/: conftest.py  test_alt_from_ollama.py  test_audit_contrast.py  test_audit_figure.py  test_audit_laws_of_ux.py  test_bodytext.py  test_captions.py  test_cleanup_local_skills.py  test_cli_driver.py  test_cli_help.py  test_cli_to_gui.py  test_colors_module.py  test_extract_cv_subset.py  test_favicons.py  test_helper_sync.py  test_i18n.py  test_install_alt_ai.py  test_install_captions.py  test_lang.py  test_lint_a11y.py  test_lint_a11y_fix.py  test_lint_markdown.py  test_lint_markdown_fix.py  test_meta_from_ollama.py  test_narrate.py  test_palette_to_tailwind.py  test_plain_language.py  test_pre_commit_hooks.py  test_prompts.py  test_release_packaging.py  test_render_diagram.py  test_simulate_cvd.py  test_single_llm.py  test_site_indexes.py  test_skills_manifest.py  test_snippet_catalog.py  test_style.py  test_translate_captions.py  test_triggers_md.py  test_two_modes_discipline.py  (+4 more)
web/: head.html  humans.txt  index.html  llms.txt  robots.txt  site.webmanifest  sitemap.xml
(+276 files in other folders)
