[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "front-cli"
version = "0.29.0"
description = "Unified front driver — one entry point for six front skills (front-ui, front-accessibility, front-audio, front-vision, front-colors, front-publish)."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [{ name = "Warith Harchaoui" }]
keywords = ["front", "claude", "skill", "cli", "tailwind", "a11y"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
]

[project.urls]
Homepage = "https://github.com/warith-harchaoui/front"
Repository = "https://github.com/warith-harchaoui/front"
Changelog = "https://github.com/warith-harchaoui/front/blob/main/CHANGELOG.md"
Issues = "https://github.com/warith-harchaoui/front/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
front = "front_cli.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
